# QT_QML

./: .clang-format  .gitignore  .qmlformat.ini  CMakeLists.txt  CMakePresets.json  Main.qml  README.md  qmlmodules.cmake
android/: AndroidManifest.xml
content/: AudioBox.qml  CMakeLists.txt
src/: CMakeLists.txt  PlayerController.cpp  PlayerController.hpp  main.cpp
src/app/: CMakeLists.txt  main.cpp
src/app/qml/: Main.qml
src/settings/: CMakeLists.txt
test_project/: .gitignore  CMakeLists.txt  Main.qml  main.cpp  qmlmodules.cmake
test_project/content/: AudioBox.qml  CMakeLists.txt  ImageButton.qml  TextButton.qml
test_project/src/: CMakeLists.txt  PlayerController.cpp  PlayerController.h  main.cpp
tests/test1/: CMakeLists.txt
tests/test2/: CMakeLists.txt  Main.qml  main.cpp
